--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-mutation-mapper",
-  "version": "0.3.2",
+  "version": "0.3.3-alpha.0",
   "description": "Generic Mutation Mapper",
   "author": "cBioPortal",
   "license": "GNU Affero General Public License v3.0",
@@ -25,7 +25,7 @@
   },
   "dependencies": {
     "autobind-decorator": "^2.4.0",
-    "cbioportal-frontend-commons": "^0.0.23",
+    "cbioportal-frontend-commons": "^0.0.25-alpha.0",
     "classnames": "^2.2.6",
     "jquery": "^3.3.1",
     "lodash": "^4.17.11",
